tests/script_errors/lexer_diamond/error.txt
Error: 
    1 | <>
      | ^^ Found the token `<>` but expected one of `!`, `\``, `$`, `(`, `+`, `-`, `<doc-comment>`, `<ident>`, `<mod-comment>`, `[`, `absent`, `args`, `bool`, `const`, `drop`, `emit`, `event`, `float`, `fn`, `for`, `group`, `heredoc`, `int`, `intrinsic`, `let`, `match`, `merge`, `mod`, `nil`, `not`, `patch`, `present`, `recur`, `state`, `window`, `{`
      |    NOTE: Did you mean to use `!`?
